2007-07-12  Kasper Skaarhoej <kasper2007@typo3.com>
# Fixed issues related to cleaner-plug-in-script

2007-07-12  Kasper Skaarhoej <kasper2007@typo3.com>

# Fixed issues related to display of languages
+ Added class for cleaning out unused content elements on pages (hooks into the "lowlevel" cleaner CLI script)

2007-07-05  Dmitry Dulepov  <dmitry@typo3.org>

	RELEASE OF TEMPLAVOILA 1.3.3

 # Fixed: wrong file version went to 1.3.2 (mod1/index.php)

2007-07-04  Dmitry Dulepov  <dmitry@typo3.org>

	RELEASE OF TEMPLAVOILA 1.3.2

 + Added hook for additional content (see http://bugs.typo3.org/view.php?id=4821)
 + Added a hook to add/modify/delete sidebar tabs
 + Added checks for permissions and removal of new/edit/cut/copy/paste/delete icons
 + Added posibility to hide sidebar objects if they are empty though object configuration
 # Fixed spacing problem for disabled tabs
 # Hidden several tabs if they do not have content
 # Hidden static data structures from the list of content elements that can be created through new content element wizard
 # Fixed: $LANG sometimes does not exist and causes failures in class.tx_templavoila_access.php

2007-06-21  Dmitry Dulepov  <dmitry@typo3.org>

 + DS title for static data structures can use 'LLL:' translation
 + Static DSes now can specify default file references
 # Fix: wrong element position if element is inserted using old page module
 # Fix: unnecessary loop while generating TS during mapping
 # Fixed bug 5253: sort FCEs in wizard
 # Fixed bug 5679: "Create new Template Object" stopped working in 1.3.1
 # Fixed bug 5692: Manual sorting of FCEs displayed in the New Content Wizard.

2007-05-09  Dmitry Dulepov  <dmitry@typo3.org>

	RELEASE OF TEMPLAVOILA 1.3.1

2007-02-27  Dmitry Dulepov  <dmitry@typo3.org>

 # Changed hook parameter names in class.tx_templavoila_access.php

2007-03-24  Kasper Skaarhoej
 # Fixed bug that the Page module would not show page structure if a Template Object value was set but not the Data Structure
